--- a/14.11 task1.html
+++ b/14.11 task1.html
@@ -31,16 +31,16 @@
         <td id="siva">brown</td>
     </tr>
     <tr>
-        <td id="love">aqua</td>
-        <td id="lust">burywood</td>
-        <td id="crush">adetblue</td>
-        <td id="fling">chartreuse</td>
+        <td id="aqua">aqua</td>
+        <td id="burywood">burywood</td>
+        <td id="adetblue">adetblue</td>
+        <td id="charset">chartreuse</td>
     </tr>
     <tr>
-        <td id="amma">cornflower</td>
-        <td id="nanna">crimson</td>
-        <td id="akka">coral</td>
-        <td id="tammu">cyan</td>
+        <td id="cornflower">cornflower</td>
+        <td id="crimson">crimson</td>
+        <td id="coral">coral</td>
+        <td id="cyan">cyan</td>
     </tr>
     </table>
 </body>
